--- a/docker-elk/logstash/pipeline/logstash.conf
+++ b/docker-elk/logstash/pipeline/logstash.conf
@@ -3,14 +3,62 @@ input {
 		port => 5000
 	}
 	udp {
-		port => 12201
+		port => 5000
+	}
+
+	# tcp {
+	# 	port => 9453
+	# 	type => dev_log
+	# }
+
+	file {
+		path => ["/usr/mydata/*.log*"]
+		start_position => beginning
+		# type => "system"
+		sincedb_path => "/dev/null"
+		# sincedb_path => "/usr/mydata/test.sincedb"
 	}
 }
+
+
+filter {
+	grok {
+		match => [
+				"message", "%{TIMESTAMP_ISO8601:logTimestamp} %{DATA:num} %{DATA:logType} %{DATA:Company} %{GREEDYDATA:detail} - %{NUMBER:query_count:int} %{NUMBER:query_time:float} %{NUMBER:remaining_time:float}",
+				"message", "%{TIMESTAMP_ISO8601:logTimestamp} %{DATA:num} %{DATA:logType} %{DATA:Company} %{GREEDYDATA:detail}"
+				]
+	}
+
+	mutate {
+		# add_field => { "server_time" => "%{logTimestamp}"}
+		add_field => { "local_time" => "%{logTimestamp}"}
+		remove_field => [ "host" ]
+	}
+
+	date {
+        match => [ "local_time", "ISO8601" ]
+		timezone => "UTC"
+		target => "local_time"
+    }
+
+	# date {
+	# 	match => ["server_time", "ISO8601"]
+	# 	timezone => "Asia/Taipei"
+    # 	target => "server_time"
+	# }
+
+}
+
 
 ## Add your filters / logstash plugins configuration here
 
 output {
 	elasticsearch {
 		hosts => "elasticsearch:9200"
+		user => "elastic"
+		password => "changeme"
+		# 在 output 的部分 index 後面多了 %{+xxxx.ww}，這是為了把 Log 按每週區分
+		index => "myindex-%{+xxxx.ww}"
+		document_type => "%{[@metadata][type]}"
 	}
 }
