--- a/docker-elk/elasticsearch/config/elasticsearch.yml
+++ b/docker-elk/elasticsearch/config/elasticsearch.yml
@@ -5,12 +5,9 @@
 cluster.name: "docker-cluster"
 network.host: 0.0.0.0
 
-# minimum_master_nodes need to be explicitly set when bound on a public IP
-# set to 1 to allow single node clusters
-# Details: https://github.com/elastic/elasticsearch/pull/17288
-discovery.zen.minimum_master_nodes: 1
-
-## Use single node discovery in order to disable production mode and avoid bootstrap checks
-## see https://www.elastic.co/guide/en/elasticsearch/reference/current/bootstrap-checks.html
+## X-Pack settings
+## see https://www.elastic.co/guide/en/elasticsearch/reference/current/setup-xpack.html
 #
-discovery.type: single-node
+xpack.license.self_generated.type: basic 
+xpack.security.enabled: true
+xpack.monitoring.collection.enabled: true
