--- a/docker-elk/logstash/pipeline/logstash.conf
+++ b/docker-elk/logstash/pipeline/logstash.conf
@@ -1,15 +1,11 @@
 input {
+	beats {
+		port => 5044
+	}
+
 	tcp {
 		port => 5000
 	}
-	udp {
-		port => 5000
-	}
-
-	# tcp {
-	# 	port => 9453
-	# 	type => dev_log
-	# }
 
 	file {
 		path => ["/usr/mydata/*.log*"]
@@ -57,6 +53,7 @@ output {
 		hosts => "elasticsearch:9200"
 		user => "elastic"
 		password => "changeme"
+		ecs_compatibility => disabled
 		# 在 output 的部分 index 後面多了 %{+xxxx.ww}，這是為了把 Log 按每週區分
 		index => "myindex-%{+xxxx.ww}"
 		document_type => "%{[@metadata][type]}"
