--- a/docker-elk/kibana/config/kibana.yml
+++ b/docker-elk/kibana/config/kibana.yml
@@ -3,7 +3,7 @@
 ## https://github.com/elastic/kibana/blob/master/src/dev/build/tasks/os_packages/docker_generator/templates/kibana_yml.template.js
 #
 server.name: kibana
-server.host: "0"
+server.host: 0.0.0.0
 elasticsearch.hosts: [ "http://elasticsearch:9200" ]
 xpack.monitoring.ui.container.elasticsearch.enabled: true
 
