--- a/docker-elk/filebeat/config/filebeat.yml
+++ b/docker-elk/filebeat/config/filebeat.yml
@@ -13,14 +13,34 @@ filebeat.autodiscover:
     # containers as they start and stop.
     - type: docker
       hints.enabled: true
+      # templates:
+      #   - condition:
+      #       contains:
+      #         docker.container.image: jwilder/nginx-proxy:alpine
+      #     config:
+      #       - type: container
+      #         paths:
+      #           - /var/lib/docker/containers/${data.docker.container.id}/*.log
+      #         exclude_lines: ["^\\s+[\\-`('.|_]"]  # drop asciiart lines
+
+      #   - condition:
+      #       contains:
+      #         docker.container.name: odoo_docker_deploy_web_1
+      #     config:
+      #       - type: container
+      #         paths:
+      #           - /var/lib/docker/containers/${data.docker.container.id}/*.log
+      #         exclude_lines: ["^\\s+[\\-`('.|_]"]  # drop asciiart lines
+
 
 processors:
   - add_cloud_metadata: ~
 
 output.elasticsearch:
-  hosts: ['http://elasticsearch:9200']
+  #hosts: ['http://elasticsearch:9200']
+  hosts: ['192.168.7.87:9200']
   username: elastic
-  password: ${ELASTIC_PASSWORD}
+  password: changeme
 
 ## HTTP endpoint for health checking
 ## https://www.elastic.co/guide/en/beats/filebeat/7.17/http-endpoint.html
