--- a/docker-elk/metricbeat/config/metricbeat.yml
+++ b/docker-elk/metricbeat/config/metricbeat.yml
@@ -32,7 +32,7 @@ processors:
   - add_cloud_metadata: ~
 
 output.elasticsearch:
-  hosts: ['192.168.7.87:9200']
+  hosts: ['YOUR_IP:9200']
   username: elastic
   password: changeme
 
