--- a/docker-elk/filebeat/config/filebeat.yml
+++ b/docker-elk/filebeat/config/filebeat.yml
@@ -65,11 +65,12 @@ output.elasticsearch:
 
 setup.template.name: "filebeat1"
 setup.template.pattern: "filebeat1-*"
-setup.ilm.enabled: false
+# setup.ilm.pattern: "{now/d}-000001"        # by daily
+setup.ilm.pattern: "{now/w{yyyy.ww}}-000001" # by weekly
+setup.ilm.enabled: true
 
 ## HTTP endpoint for health checking
 ## https://www.elastic.co/guide/en/beats/filebeat/7.17/http-endpoint.html
-#
 
 http.enabled: true
 http.host: 0.0.0.0
